[gd_scene load_steps=3 format=3 uid="uid://cgmbjt1oeqvsw"]

[ext_resource type="Script" path="res://objects/UI/sell_fish_entry.gd" id="1_ldtlp"]
[ext_resource type="Texture2D" uid="uid://dwnons7hqfqhm" path="res://sprites/Catchables/Fishes/common_fish.png" id="1_w6ree"]

[node name="Panel" type="PanelContainer"]
custom_minimum_size = Vector2(0, 200)
offset_right = 1204.0
offset_bottom = 200.0
script = ExtResource("1_ldtlp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ImageTexture" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_w6ree")
expand_mode = 2
stretch_mode = 5

[node name="NameLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "COMMON FISH"
fit_content = true
autowrap_mode = 0

[node name="AmountLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "X 2"
fit_content = true
autowrap_mode = 0

[node name="PriceLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "PRIX"
fit_content = true
autowrap_mode = 0

[node name="BtnSell" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "SELL"

[connection signal="pressed" from="MarginContainer/HBoxContainer/BtnSell" to="." method="_on_btn_sell_pressed"]
